Update ViewService to include new methods' JavaDocs